Сделана страница каталога

--- a/product/single-page/index.html
+++ b/product/single-page/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../css/style.css">
     <script src="https://kit.fontawesome.com/de7ac51c46.js" crossorigin="anonymous"></script>
     <title>Single Page</title>
@@ -91,7 +94,7 @@
                                 <p>&dollar;500.00</p>
                             </div>
                             <button class="main-header__cart-checkout">checkout</button>
-                            <a class="main-header__go-to-cart" href="cart/">go to cart</a>
+                            <a class="main-header__go-to-cart" href="../../cart/">go to cart</a>
                         </div>
                     </div>
                     <a class="main-header__account" href="#">
@@ -103,7 +106,7 @@
         </div>
         <nav class="main-header__bottom">
             <ul class="main-header__nav-list container">
-                <li class="main-header__list-item"><a class="main-header__list-link" href="../../../../index.html">home</a>
+                <li class="main-header__list-item"><a class="main-header__list-link" href="../../index.html">home</a>
                     <nav class="main-header__mega-menu drop-down">
                         <ul class="main-header__mega-menu-content">
                             <li class="main-header__category"><a href="../index.html">women</a>
@@ -667,7 +670,7 @@
         </section>
         <section class="footer-info container">
             <div class="footer-info__company-description">
-                <a class="logo" href="../../../../index.html">
+                <a class="logo" href="../../index.html">
                     <img class="logo-img" src="../../img/logo.svg" alt="logo">
                     <p>bran<span class="logo-pink-text">d</span></p>
                 </a>
@@ -677,7 +680,7 @@
             <nav class="footer-info__nav">
                 <h3 class="footer-info__nav-title">company</h3>
                 <ul class="footer-info__nav-list">
-                    <li><a class="footer-info__nav-link" href="../../../../index.html">Home</a></li>
+                    <li><a class="footer-info__nav-link" href="../../index.html">Home</a></li>
                     <li><a class="footer-info__nav-link" href="../index.html"></a></li>
                     <li><a class="footer-info__nav-link" href="#">About</a></li>
                     <li><a class="footer-info__nav-link" href="#">How It&nbsp;Works</a></li>
