--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/de7ac51c46.js" crossorigin="anonymous"></script>
     <title>Homepage</title>
@@ -448,7 +451,6 @@
                     <p class="slider__text slider__text-big">the brand</p>
                     <p class="slider__text">of&nbsp;luxerious <span>fashion</span></p>
                 </div>
-                <img class="slider__img" src="img/top-img.png" alt="photo">
             </div>
         </section>
         <section class="banners container">
