Добавлена страница корзины

--- a/shopping-cart/index.html
+++ b/shopping-cart/index.html
@@ -509,6 +509,127 @@
                 </nav>
             </div>
         </header>
+        <section class="shopping-cart container">
+            <div class="shopping-cart__products">
+                <div class="shopping-cart__products-info">
+                    <h3 class="shopping-cart__products-title">Product Details</h3>
+                    <a href="../product/single-page/" class="shopping-cart__product-link">
+                        <img class="shopping-cart__product-img" src="../img/shop-cart-card-1.png" alt="product-img">
+                        <div class="shopping-cart__product-description">
+                            <h4 class="shopping-cart__product-name">Mango People T-shirt</h4>
+                            <div class="shopping-cart__product-stars">
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star-half-o" aria-hidden="true"></i>
+                            </div>
+                            <p class="shopping-cart__product-text">Color:&nbsp;<span class="shopping-cart__product-text-lighter">Red</span></p>
+                            <p class="shopping-cart__product-text">Size:&nbsp;<span class="shopping-cart__product-text-lighter">Xll</span></p>
+                        </div>
+                    </a>
+                    <a href="../product/single-page/" class="shopping-cart__product-link">
+                        <img class="shopping-cart__product-img" src="../img/shop-cart-card-2.png" alt="product-img">
+                        <div class="shopping-cart__product-description">
+                            <h4 class="shopping-cart__product-name">Mango People T-shirt</h4>
+                            <div class="shopping-cart__product-stars">
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star-half-o" aria-hidden="true"></i>
+                            </div>
+                            <p class="shopping-cart__product-text">Color:&nbsp;<span class="shopping-cart__product-text-lighter">Red</span></p>
+                            <p class="shopping-cart__product-text">Size:&nbsp;<span class="shopping-cart__product-text-lighter">Xll</span></p>
+                        </div>
+                    </a>
+                    <a href="../product/single-page/" class="shopping-cart__product-link">
+                        <img class="shopping-cart__product-img" src="../img/shop-cart-card-3.png" alt="product-img">
+                        <div class="shopping-cart__product-description">
+                            <h4 class="shopping-cart__product-name">Mango People T-shirt</h4>
+                            <div class="shopping-cart__product-stars">
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star-half-o" aria-hidden="true"></i>
+                            </div>
+                            <p class="shopping-cart__product-text">Color:&nbsp;<span class="shopping-cart__product-text-lighter">Red</span></p>
+                            <p class="shopping-cart__product-text">Size:&nbsp;<span class="shopping-cart__product-text-lighter">Xll</span></p>
+                        </div>
+                    </a>
+                </div>
+                <div class="shopping-cart__products-prices">
+                    <div class="shopping-cart__products-prices-column">
+                        <h3 class="shopping-cart__products-title">unite Price</h3>
+                        <p class="shopping-cart__products-prices-column-cell">&dollar;150</p>
+                        <p class="shopping-cart__products-prices-column-cell">&dollar;150</p>
+                        <p class="shopping-cart__products-prices-column-cell">&dollar;150</p>
+                    </div>
+                    <div class="shopping-cart__products-prices-column">
+                        <h3 class="shopping-cart__products-title">Quantity</h3>
+                        <form action="#" method="post" class="shopping-cart__products-prices-column-cell">
+                            <input class="shopping-cart__product-quantity" type="number" name="quantity" id="quantity" value="2" min=1>
+                        </form>
+                        <form action="#" method="post" class="shopping-cart__products-prices-column-cell">
+                            <input class="shopping-cart__product-quantity" type="number" name="quantity" id="quantity" value="2" min=1>
+                        </form>
+                        <form action="#" method="post" class="shopping-cart__products-prices-column-cell">
+                            <input class="shopping-cart__product-quantity" type="number" name="quantity" id="quantity" value="2" min=1>
+                        </form>
+                    </div>
+                    <div class="shopping-cart__products-prices-column">
+                        <h3 class="shopping-cart__products-title">shipping</h3>
+                        <p class="shopping-cart__products-prices-column-cell">free</p>
+                        <p class="shopping-cart__products-prices-column-cell">free</p>
+                        <p class="shopping-cart__products-prices-column-cell">free</p>
+                    </div>
+                    <div class="shopping-cart__products-prices-column">
+                        <h3 class="shopping-cart__products-title">Subtotal</h3>
+                        <p class="shopping-cart__products-prices-column-cell">&dollar;300</p>
+                        <p class="shopping-cart__products-prices-column-cell">&dollar;300</p>
+                        <p class="shopping-cart__products-prices-column-cell">&dollar;300</p>
+                    </div>
+                    <div class="shopping-cart__products-prices-column">
+                        <h3 class="shopping-cart__products-title">ACTION</h3>
+                        <button class="shopping-cart__products-prices-column-cell shopping-cart__product-delete"><i class="fa fa-times-circle" aria-hidden="true"></i></button>
+                        <button class="shopping-cart__products-prices-column-cell shopping-cart__product-delete"><i class="fa fa-times-circle" aria-hidden="true"></i></button>
+                        <button class="shopping-cart__products-prices-column-cell shopping-cart__product-delete"><i class="fa fa-times-circle" aria-hidden="true"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="shopping-cart__buttons">
+                <button class="light-button shopping-cart__button">clear shopping cart</button>
+                <button class="light-button shopping-cart__button">continue shopping</button>
+            </div>
+            <form action="#" method="post" class="shopping-cart__form">
+                <fieldset class="shopping-cart__fieldset">
+                    <legend class="shopping-cart__bold-text">Shipping Adress</legend>
+                    <select class="shopping-cart__form-field" name="country" id="country">
+                        <option class="shopping-cart__form-option" value="Bangladesh" selected>Bangladesh</option>
+                        <option class="shopping-cart__form-option" value="Russian Federation">Russian Federation</option>
+                        <option class="shopping-cart__form-option" value="United Kingdom">United Kingdom</option>
+                        <option class="shopping-cart__form-option" value="Japan">Japan</option>
+                    </select>
+                    <label class="shopping-cart__form-arrow for="country"><i class="fa fa-caret-down" aria-hidden="true"></i></label>
+                    <input class="shopping-cart__form-field" type="text" name="state" id="state" placeholder="State">
+                    <input class="shopping-cart__form-field" type="text" name="Postcode" id="Postcode" placeholder="Postcode&nbsp;/ Zip">
+                    <button class="light-button shopping-cart__form-button">get a&nbsp;quote</button>
+                </fieldset>
+                <fieldset class="shopping-cart__fieldset">
+                    <legend class="shopping-cart__bold-text">coupon discount</legend>
+                    <p class="shopping-cart__form-text">Enter your coupon code if&nbsp;you have one</p>
+                    <input class="shopping-cart__form-field" type="text" name="coupon-state" id="coupon-state" placeholder="State">
+                    <button class="light-button shopping-cart__form-button">Apply coupon</button>
+                </fieldset>
+                <fieldset class="shopping-cart__fieldset-price">
+                    <p>Sub total<span class="shopping-cart__text-price">&dollar;900</span></p>
+                    <p class="shopping-cart__bold-text">GRAND TOTAL<span class="shopping-cart__text-price">&dollar;900</span></p>
+                    <hr class="shopping-cart__line">
+                    <input class="pink-button shopping-cart__pink-button" type="submit" value="proceed to&nbsp;checkout">
+                </fieldset>
+            </form>
+        </section>
     </main>
     <footer>
         <section class="subscribe">
